# auto-free

./: .gitignore  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  GAME_DESIGN.md  README.md  SOLO.md  TODO.md  dependency_upgrade_plan.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
builtin-assets/: generate.mjs
docs/: api_compatibility.md
prompts/outline-parser/: chapter_detail.md  combined.md  core_elements.md  expand.md  parse.md  random.md
shared/types/: ai-provider.ts  asset.ts  game-script.ts  game-state.ts
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  providers.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: asset.rs  config.rs  game.rs  generation.rs  logs.rs  mod.rs  user_asset.rs
src-tauri/src/config/: encryption.rs  manager.rs  mod.rs
src-tauri/src/config/presets/: default.rs  minimal.rs  mod.rs  text_only.rs  zero_cost.rs
src-tauri/src/config/providers/: connectivity.rs  mod.rs
src-tauri/src/engine/: asset_manager.rs  call_history.rs  mod.rs  outline_parser.rs  pipeline.rs  validator.rs
src-tauri/src/providers/: builtin.rs  deepseek.rs  edge_tts.rs  hailuo.rs  jimeng.rs  kling.rs  miaoyin.rs  mod.rs  netease_music.rs  qwen.rs  siliconflow.rs  skymusic.rs  vidu.rs  volcengine_tts.rs  xfyun_spark.rs  zhipu.rs
src-tauri/src/types/: ai_provider.rs  asset.rs  game_script.rs  game_state.rs  mod.rs
src/adapters/: tauri.ts
src/components/CG/: CGGallery.module.css  CGGallery.tsx  CGPlayer.module.css  CGPlayer.tsx
src/components/Choice/: CandidateSelector.tsx  ChoicePanel.module.css  ChoicePanel.tsx
src/components/Config/: ConnectivityBadge.tsx  ModalitySection.tsx  ModalitySelectModal.tsx  PresetSelector.tsx  PromptEditor.tsx  ProviderCard.tsx  ProviderConfigModal.tsx  UserAssetManager.tsx
src/components/Dialogue/: DialogueBox.module.css  DialogueBox.tsx  NarrationBox.module.css  NarrationBox.tsx
src/components/HUD/: AudioControl.module.css  AudioControl.tsx  GameMenu.tsx  InventoryPanel.tsx  LogViewer.tsx  StatsPanel.tsx  TaskManager.tsx
src/components/Scene/: SceneRenderer.module.css  SceneRenderer.tsx
src/engine/: AssetLoader.ts  AudioEngine.ts  SceneExecutor.ts  StateManager.ts
src/hooks/: useConfig.ts  useGame.ts  useGeneration.ts  useUserAsset.ts
src/pages/: CreateGame.tsx  GameList.tsx  GamePlay.tsx  GenerationProgress.tsx  MainMenu.tsx  Settings.tsx
src/types/: index.ts
