[package]
name = "autofree"
version = "0.1.0"
description = "AutoFree - A Tauri Application"
authors = ["you"]
edition = "2021"

[lib]
name = "autofree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.34", features = ["bundled"] }
aes-gcm = "0.10"
sha2 = "0.10"
base64 = "0.22"
pbkdf2 = { version = "0.12", features = ["hmac"], optional = true }
dirs = "6"
async-trait = "0.1"

[features]
default = []
password-encryption = ["pbkdf2"]
