[package]
name = "autofree"
version = "0.1.0"
description = "AutoFree - A Tauri Application"
authors = ["you"]
edition = "2021"

[lib]
name = "autofree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.34", features = ["bundled"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
pbkdf2 = { version = "0.12", features = ["hmac"], optional = true }
dirs = "6"
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
rand = "0.8"
zip = "2"
log = "0.4"
fern = "0.7"
chrono = "0.4"

[features]
default = []
password-encryption = ["pbkdf2"]
